--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -4,8 +4,13 @@ services:
 
     app:
         build: .
-        container_name: micro-videos-app
-        entrypoint: dockerize -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
+        environment:
+            - GOOGLE_CLOUD_PROJECT_ID=${GOOGLE_CLOUD_PROJECT_ID}
+            - GOOGLE_CLOUD_KEY_FILE=${GOOGLE_CLOUD_KEY_FILE}
+            - GOOGLE_CLOUD_STORAGE_BUCKET=${GOOGLE_CLOUD_STORAGE_BUCKET}
+            - GOOGLE_CLOUD_STORAGE_API_URI=${GOOGLE_CLOUD_STORAGE_API_URI}
+            - TESTING_PROD=${TESTING_PROD}
+        container_name: app
         volumes:
             - .:/var/www
         networks:
@@ -16,7 +21,7 @@ services:
 
     nginx:
         build: .docker/nginx
-        container_name: micro-videos-nginx
+        container_name: nginx
         restart: always
         tty: true
         ports:
@@ -31,7 +36,7 @@ services:
     db:
         image: mysql:5.7
         command: --innodb-use-native-aio=0
-        container_name: micro-videos-db
+        container_name: db
         restart: always
         tty: true
         ports:
@@ -47,7 +52,6 @@ services:
 
     redis:
         image: redis:alpine
-        container_name: micro-videos-redis
         expose:
             - 6379
         networks:
